syntax = "proto3";

package yacht.config.proto;

import "yacht/config/proto/backtest.proto";


message InputConfig {
  string market = 1;
  string dataset = 2;
  bool is_multi_asset = 3;
  int32 num_assets_per_dataset = 4;
  string scaler = 5;
  string scale_on_interval = 6;
  repeated string tickers = 7;
  repeated string intervals = 8;
  repeated string features = 9;
  string decision_price_feature = 10;
  repeated string technical_indicators = 11;
  string start = 12;
  string end = 13;
  int32 window_size = 14;
  bool include_weekends = 15;
  double validation_split_ratio = 16;
  double backtest_split_ratio = 17;
  double embargo_ratio = 18;
  BacktestConfig backtest = 19;
}
